chore(payment): clean warnings and align idempotency tests